# waftp

./: .clang-format  README.md  meson.build  waftp.gresource.xml
src/: err.c  err.h  ftpapp.c  ftpapp.h  ftpappwin.c  ftpappwin.h  logindialog.c  logindialog.h  main.c  mainbox.c  mainbox.h  meson.build  taskbox.c  taskbox.h  tree.c  tree.h
ui/: login.ui  mainbox.ui  taskbox.ui  window.ui
